--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /nbproject/
 build.xml
 manifest.mf
+/Lesson 05 SerialIO exercise/nbproject/private/
+/Lesson 05 SerialIO exercise/build/
+/Lesson 05 TCP Thread exercise/nbproject/private/
+/Lesson 05 TCP Thread exercise/build/
