--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ manifest.mf
 /Lesson 05 SerialIO exercise/build/
 /Lesson 05 TCP Thread exercise/nbproject/private/
 /Lesson 05 TCP Thread exercise/build/
+/Lesson06_20_7/nbproject/private/
+/Lesson06_20_7/build/
+/Lesson 06 FlashingText/nbproject/private/
+/Lesson 06 FlashingText/build/
+/Lesson 06 FlashingText/dist/
