--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ manifest.mf
 /Lesson 06 FlashingText/nbproject/private/
 /Lesson 06 FlashingText/build/
 /Lesson 06 FlashingText/dist/
+/fruit06/nbproject/private/
+/fruit06/build/
+/fruit06/dist/
