--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ manifest.mf
 /fruit06/nbproject/private/
 /fruit06/build/
 /fruit06/dist/
+/DB_961/nbproject/private/
+/DB_961/build/
+/JavaDB/nbproject/private/
+/JavaDB/build/
+/JavaSQL/nbproject/private/
