--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ manifest.mf
 /JavaDB/nbproject/private/
 /JavaDB/build/
 /JavaSQL/nbproject/private/
+/Lesson 07 CallbackExercise/nbproject/private/
+/Lesson 07 CallbackExercise/build/
+/Lesson 07 CallbackExercise/dist/
