--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ manifest.mf
 /Lesson 07 CallbackExercise/nbproject/private/
 /Lesson 07 CallbackExercise/build/
 /Lesson 07 CallbackExercise/dist/
+/chapter44/nbproject/private/
